--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@
 
 h1
 {
-    color:red
+    color:red;
+    text-align:center;
+    
 }
 
 #ground
@@ -39,7 +41,7 @@ h5{
     color:rgb(2, 112, 2)
 }
 #map{
-    height:400px;
+    height:350px;
     overflow: scroll; 
     scroll-behavior:auto;
     position:relative; 
